preparing for rewrite